--- a/projects2.css
+++ b/projects2.css
@@ -28,7 +28,7 @@ header{
     align-items: center;
     background: rgb(23, 23, 23); 
 }
-.div1{
+.banner-part-1{
     font-family: sans-serif;
     width: 40%;
     text-align: left;
@@ -36,10 +36,10 @@ header{
     background: rgb(23, 23, 23);
 }
 
-.div1 h2{
+.banner-part-1 h2{
     font-size: 50px;
 }
-.div1 a{
+.banner-part-1 a{
 text-decoration: none;
 color: white;
 font-family: 20px;
@@ -51,20 +51,20 @@ border-radius: 5px;
 .fa-angle-right{
 padding: 0 5px; 
 } 
-.div1 a .fa-angle-right{
+.banner-part-1 a .fa-angle-right{
     margin-top: 20px;
 }
-.div1 p{
+.banner-part-1 p{
     margin: 20px 0;
     color: rgb(221, 216, 216);
 }
 
 
-.div2{
+.banner-part-2{
     width: 40%;
     
 }
-.div2 img{
+.banner-part-2 img{
     background: rgb(23, 23, 23);
     width: 100%;
     margin-top: 48px;
@@ -231,16 +231,16 @@ hr{
     .header{
         flex-direction: column;
     }
-    .div1 h2{
+    .banner-part-1 h2{
         font-size: 25px;
     }
 
-    .div1{
+    .banner-part-1{
         text-align: center;
         width: 100%;
         padding-top: 100px;
     }
-    .div2{
+    .banner-part-2{
         width: 100%;
     }
     
