--- a/style.css
+++ b/style.css
@@ -38,40 +38,40 @@ header{
 
 .banner-part-1 h2{
     font-size: 50px;
-    animation: slidshow 2s ease .5s infinite alternate;
+    animation: slidshow 6s ease .5s infinite alternate;
     animation-play-state: running;
 }
 
 
 @keyframes slidshow {
     20% {
-        color: orange;
-        background-image: linear-gradient(tomato, grey);
+        color: #f6e58d;
+        background-image: linear-gradient(#B53471, #1B1464);
         border-radius: 20px;
-        margin: 50px;
+        margin: 20px;
     }
 
     40% {
-        color: red;
-        background-image: linear-gradient(yellow, purple);
+        color: #130f40;
+        background-image: linear-gradient(#F79F1F, #A3CB38);
        
     }
 
     60% {
-        color: rgb(105, 43, 54);
-        background-image: linear-gradient(white, rgb(183, 25, 25));
+        color: #44bd32;
+        background-image: linear-gradient(#778ca3, #f7b731(183, 25, 25));
     }
 
     80% {
-        color: tomato;
-        background-image: linear-gradient(rgb(42, 64, 178), green);
+        color: #7f8fa6;
+        background-image: linear-gradient(#EA2027, #2d98da);
         border-radius: 30px;
 
 
     }
 
     100% {
-        color: white;
+        color: #0652DD;
         background-image: linear-gradient(rgb(44, 8, 10), rgb(34, 127, 174));
         border-radius: 15px;
     }
@@ -160,7 +160,7 @@ li{
     border-radius: 5px;
     width: 150px;
 }
-.red{
+.blog-btn{
     background: red;;
 }
 
@@ -277,9 +277,8 @@ hr{
 /* media query mobile screen start here */
 
 @media screen and (max-width:576px) {
-    .header{
-        
-        flex-direction: column;
+    .header{   
+    flex-direction: column;
     }
     .banner-part-1 h2{
         font-size: 25px;
@@ -320,7 +319,9 @@ hr{
 
 /* media query tablet screen start here */
 @media screen and (min-width:577px) and (max-width:900px) {
-    
+    .header{
+        overflow: hidden;
+    }
     .banner-part-1 h2{
         font-size: 20px;
     }
